# Links

./: README.md
backend/: .env.example  db.py  gemini.py  main.py  migration.sql  models.py  pyproject.toml  requirements.txt  scraper.py
docs/: architecture.md  data-flow.md  documentation.md  features.md  module-requirements.md  module-specifications.md  setup.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AskBar.jsx  CategorySidebar.jsx  PostCard.jsx
frontend/src/lib/: api.js  supabase.js
frontend/src/pages/: Ask.jsx  Category.jsx  Home.jsx
